--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0",
-        "phpunit/phpunit": "5.7.x"
+        "phpunit/phpunit": "5.7.x",
+        "phpstan/phpstan": "^0.7.0"
     },
     "scripts": {
         "symfony-scripts": [
