--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests"
         }
     },
     "require": {
@@ -20,7 +20,7 @@
         "symfony/symfony": "^3.3",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0",
+        "incenteev/composer-parameter-handler": "^2.1",
         "twig/twig": "^2.0",
         "j7mbo/twitter-api-php": "dev-master"
     },
