--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0",
         "phpunit/phpunit": "^6.2",
-        "phpstan/phpstan": "^0.7"
+        "phpstan/phpstan": "^0.7",
+        "symplify/easy-coding-standard": "^2.1"
     },
     "scripts": {
         "symfony-scripts": [
