--- a/easy-coding-standard.neon
+++ b/easy-coding-standard.neon
@@ -110,6 +110,7 @@ checkers:
     - SlevomatCodingStandard\Sniffs\TypeHints\ReturnTypeHintSpacingSniff
     SlevomatCodingStandard\Sniffs\TypeHints\TypeHintDeclarationSniff:
         usefulAnnotations:
+            - @Route
             - @todo
             - @dataProvider
         enableEachParameterAndReturnInspection: true
