cs fixes + PHP 7.1 bump

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,4 +7,4 @@ services:
         resource: ../../src/AppBundle
 
     AppBundle\Service\TwitterAPIService:
-        arguments: [ "%twitter.access%", "%twitter.queries%" ]
+        arguments: [ "%twitter.access%", "%twitter.queries%", "%twitter.me%" ]
